--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -1,2 +1,6 @@
+v1.1 - 08.09.2012
+*  Fixed minor checking bug
+*  Fixed NPE while accepting non existed invitation
+
 v1.0 - 07.09.2012
 *  Initial version.
