--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -1,3 +1,6 @@
+v1.2 - 08.09.2012
+*  Fixed too long inventory name
+
 v1.1 - 08.09.2012
 *  Fixed minor checking bug
 *  Fixed NPE while accepting non existed invitation
